--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc",
     "test": "jest",
     "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
-    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --input ./src/logion-api/interfaces/ --package ../interfaces",
-    "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output src/logion-api/interfaces/ --package ../interfaces"
+    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --input ./src/interfaces/ --package ../interfaces",
+    "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output src/interfaces/ --package ../interfaces"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,9 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^7.6.1",
-    "@polkadot/extension-dapp": "^0.42.7",
-    "@polkadot/keyring": "^8.3.3",
-    "@polkadot/networks": "^8.3.3",
-    "@polkadot/util": "^8.3.3",
-    "@polkadot/util-crypto": "^8.3.3",
+    "@polkadot/api": "^8.3.1",
+    "@polkadot/util": "^9.1.1",
+    "@polkadot/util-crypto": "^9.1.1",
     "@types/uuid": "^8.3.4",
     "fast-sha256": "^1.3.0",
     "moment": "^2.29.1",
@@ -37,16 +34,16 @@
   },
   "homepage": "https://github.com/logion-network/logion-api#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^7.13.1",
+    "@polkadot/typegen": "^8.3.1",
     "@tsconfig/node14": "^1.0.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
+    "jest": "^28.0.3",
+    "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   }
 }
