--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 node_modules
-dist
+dist/
 *.tgz
 .idea
+.yarn
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
