--- a/package.json
+++ b/package.json
@@ -1,49 +1,14 @@
 {
-  "name": "logion-api",
-  "version": "0.3.0",
-  "description": "logion API",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "jest",
-    "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
-    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --input ./src/interfaces/ --package ../interfaces",
-    "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output src/interfaces/ --package ../interfaces"
-  },
+  "version": "0.1.0",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/logion-network/logion-api.git"
   },
-  "keywords": [
-    "logion",
-    "api"
-  ],
   "author": "Logion Team",
   "license": "Apache-2.0",
-  "dependencies": {
-    "@polkadot/api": "^8.3.1",
-    "@polkadot/util": "^9.1.1",
-    "@polkadot/util-crypto": "^9.1.1",
-    "@types/uuid": "^8.3.4",
-    "fast-sha256": "^1.3.0",
-    "moment": "^2.29.1",
-    "uuid": "^8.3.2"
-  },
-  "bugs": {
-    "url": "https://github.com/logion-network/logion-api/issues"
-  },
-  "homepage": "https://github.com/logion-network/logion-api#readme",
-  "devDependencies": {
-    "@polkadot/typegen": "^8.3.1",
-    "@tsconfig/node14": "^1.0.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "jest": "^28.0.3",
-    "ts-jest": "^28.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
-  },
-  "engines": {
-    "node": ">=16"
-  }
+  "workspaces": [
+    "packages/*"
+  ],
+  "packageManager": "yarn@3.2.0"
 }
