feat: add logion client with authentication.
logion-network/logion-internal#454

--- a/packages/node-api/tsconfig.json
+++ b/packages/node-api/tsconfig.json
@@ -6,5 +6,8 @@
         "@polkadot/api/augment": ["src/logion-api/interfaces/augment-api.ts"],
         "@polkadot/types/augment": ["src/logion-api/interfaces/augment-types.ts"]
     }
-  }
+  },
+  "include": [
+    "./src/**/*"
+  ]
 }
