--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "@logion/node-api",
+  "name": "@logion/client",
   "version": "0.1.0",
-  "description": "logion API",
+  "description": "logion SDK for client applications",
   "main": "index.js",
   "packageManager": "yarn@3.2.0",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
-    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --input ./src/interfaces/ --package ../interfaces",
-    "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output src/interfaces/ --package ../interfaces",
+    "test": "jasmine --config=jasmine.json",
     "do-dry-publish": "yarn prepare-publish && cd ./dist && npm publish --access public --dry-run",
     "prepare-publish": "cp package.json README.md .npmignore ../../LICENSE ./dist",
     "do-publish": "yarn prepare-publish && cd ./dist && npm publish --access public"
@@ -17,33 +14,32 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/logion-network/logion-api.git",
-    "directory": "packages/node-api"
+    "directory": "packages/client"
   },
   "keywords": [
     "logion",
-    "api"
+    "api",
+    "client"
   ],
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^8.3.1",
-    "@polkadot/util": "^9.1.1",
-    "@polkadot/util-crypto": "^9.1.1",
-    "@types/uuid": "^8.3.4",
-    "fast-sha256": "^1.3.0",
-    "moment": "^2.29.1",
-    "uuid": "^8.3.2"
+    "@logion/node-api": "^0.1.0",
+    "axios": "^0.27.2",
+    "luxon": "^2.3.2"
   },
   "bugs": {
     "url": "https://github.com/logion-network/logion-api/issues"
   },
-  "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
+  "homepage": "https://github.com/logion-network/logion-api/packages/client#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^8.3.1",
     "@tsconfig/node16": "^1.0.1",
     "@types/jest": "^27.4.1",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^17.0.21",
-    "jest": "^28.0.3",
+    "jasmine": "^4.1.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "moq.ts": "^7.3.4",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
