--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,7 +24,7 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@logion/node-api": "^0.1.0",
+    "@logion/node-api": "workspace:^",
     "axios": "^0.27.2",
     "luxon": "^2.3.2"
   },
@@ -34,13 +34,11 @@
   "homepage": "https://github.com/logion-network/logion-api/packages/client#readme",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.1",
-    "@types/jest": "^27.4.1",
     "@types/luxon": "^2.3.2",
     "@types/node": "^17.0.21",
     "jasmine": "^4.1.0",
     "jasmine-spec-reporter": "^7.0.0",
     "moq.ts": "^7.3.4",
-    "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
