--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "build": "yarn build-client && yarn build-node-api",
+    "build": "yarn build-node-api && yarn build-client",
     "build-client": "cd packages/client && yarn build",
     "build-node-api": "cd packages/node-api && yarn build",
     "test": "yarn test-client && yarn test-node-api",
