feat: add client integration test.
logion-network/logion-internal#461

--- a/packages/client/.npmignore
+++ b/packages/client/.npmignore
@@ -1,1 +1,9 @@
-**/__mocks__/**/*
+/test/**
+/integration/**
+/src/**
+/scripts/**
+docker-compose.yml
+front_config.js
+front_web*.conf
+jasmine*.json
+tsconfig*.json
