chore: fix npmignore of node-api.

--- a/packages/node-api/.npmignore
+++ b/packages/node-api/.npmignore
@@ -1,1 +1,10 @@
 **/__mocks__/**/*
+/test/**
+/integration/**
+/src/**
+/scripts/**
+docker-compose.yml
+front_config.js
+front_web*.conf
+jest*.js
+tsconfig*.json
