chore: install version plugin and bump versions.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
-npmPublishAccess: public
-yarnPath: .yarn/releases/yarn-3.2.0.cjs
 nodeLinker: node-modules
+
+npmPublishAccess: public
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: "@yarnpkg/plugin-version"
+
+yarnPath: .yarn/releases/yarn-3.2.0.cjs
