--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/client",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "logion SDK for client applications",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
@@ -45,5 +45,6 @@
   },
   "engines": {
     "node": ">=16"
-  }
+  },
+  "stableVersion": "0.2.0"
 }
