--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
   ],
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "build": "yarn build-node-api && yarn build-client",
-    "build-client": "cd packages/client && yarn build",
-    "build-node-api": "cd packages/node-api && yarn build",
-    "test": "yarn test-client && yarn test-node-api",
-    "test-client": "cd packages/client && yarn test",
-    "test-node-api": "cd packages/node-api && yarn test"
+    "build": "yarn workspaces foreach run build",
+    "test": "yarn workspaces foreach run test"
   }
 }
