--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -4,6 +4,8 @@
     "outDir": "./dist"
   },
   "include": [
-    "./src/**/*"
+    "./src/**/*",
+    "./test/**/*",
+    "./integration/**/*"
   ]
 }
