--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "test": "jest",
     "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
-    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --input ./src/interfaces/ --package ../interfaces",
+    "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package ../interfaces",
     "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output src/interfaces/ --package ../interfaces"
   },
   "repository": {
@@ -23,9 +23,9 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^8.3.1",
-    "@polkadot/util": "^9.1.1",
-    "@polkadot/util-crypto": "^9.1.1",
+    "@polkadot/api": "^8.8.2",
+    "@polkadot/util": "^9.4.1",
+    "@polkadot/util-crypto": "^9.4.1",
     "@types/uuid": "^8.3.4",
     "fast-sha256": "^1.3.0",
     "moment": "^2.29.1",
@@ -36,7 +36,7 @@
   },
   "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^8.3.1",
+    "@polkadot/typegen": "^8.8.2",
     "@tsconfig/node16": "^1.0.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
