--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -36,6 +36,7 @@
     "@tsconfig/node16": "^1.0.1",
     "@types/luxon": "^2.3.2",
     "@types/node": "^17.0.21",
+    "form-data": "^4.0.0",
     "jasmine": "^4.1.0",
     "jasmine-spec-reporter": "^7.0.0",
     "moq.ts": "^7.3.4",
