--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "@logion/node-api": "workspace:^",
     "axios": "^0.27.2",
-    "luxon": "^2.3.2"
+    "luxon": "^2.3.2",
+    "mime-db": "^1.52.0"
   },
   "bugs": {
     "url": "https://github.com/logion-network/logion-api/issues"
@@ -34,7 +35,9 @@
   "homepage": "https://github.com/logion-network/logion-api/packages/client#readme",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.1",
+    "@types/jasmine": "^4.0.3",
     "@types/luxon": "^2.3.2",
+    "@types/mime-db": "^1.43.1",
     "@types/node": "^17.0.21",
     "form-data": "^4.0.0",
     "jasmine": "^4.1.0",
