--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -41,6 +41,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "jest": "^28.0.3",
+    "jest-jasmine2": "^28.1.2",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
