--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "build": "yarn workspaces foreach run build",
-    "test": "yarn workspaces foreach run test"
+    "build": "yarn workspaces foreach -t run build",
+    "test": "yarn workspaces foreach -t run test"
   }
 }
