--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "build": "tsc",
+    "build": "yarn eslint src/** && tsc",
     "test": "jest",
     "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
     "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package ../interfaces",
@@ -40,6 +40,9 @@
     "@tsconfig/node16": "^1.0.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "^8.19.0",
     "jest": "^28.0.3",
     "jest-jasmine2": "^28.1.2",
     "ts-jest": "^28.0.0",
