--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.3.2",
+  "version": "0.4.0-1",
   "description": "logion API",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
