--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "website"
   ],
   "packageManager": "yarn@3.2.0",
   "scripts": {
