--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "lib": ["dom"]
+    "lib": ["dom"],
+    "baseUrl": "."
   },
   "include": [
     "./src/**/*",
