--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "yarn@3.2.0",
   "scripts": {
     "build": "yarn workspaces foreach -t run build",
+    "lint": "yarn workspaces foreach -t run lint",
     "test": "yarn workspaces foreach -t run test"
   }
 }
