--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@logion/node-api",
-  "version": "0.4.0",
+  "version": "0.4.1-1",
   "description": "logion API",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
   "scripts": {
-    "build": "yarn eslint src/** && tsc",
+    "build": "yarn lint && tsc",
+    "lint": "yarn eslint src/**",
     "test": "jest",
     "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
     "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package ../interfaces",
