chore: trigger website build.

--- a/.github/workflows/push_pr.yml
+++ b/.github/workflows/push_pr.yml
@@ -2,8 +2,12 @@ name: Build and tests
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - website/**
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - website/**
 
 jobs:
   build:
