--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.6.0",
+  "version": "0.7.0-1",
   "description": "logion API",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
@@ -8,6 +8,7 @@
     "build": "yarn lint && tsc",
     "lint": "yarn eslint src/**",
     "test": "jest",
+    "integration-test": "docker-compose up -d && NODE_TLS_REJECT_UNAUTHORIZED=0 jasmine --config=jasmine-integration.json ; docker-compose down",
     "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
     "generate:defs": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package ../interfaces",
     "generate:meta": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output src/interfaces/ --package ../interfaces"
@@ -38,11 +39,14 @@
   "devDependencies": {
     "@polkadot/typegen": "^8.14.1",
     "@tsconfig/node16": "^1.0.3",
+    "@types/jasmine": "^4.0.3",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint": "^8.20.0",
+    "jasmine": "^4.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "jest": "^28.1.3",
     "jest-jasmine2": "^28.1.3",
     "ts-jest": "^28.0.7",
