feat: add company flag.
logion-network/logion-internal#628

--- a/packages/crossmint/package.json
+++ b/packages/crossmint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/crossmint",
-  "version": "0.1.1",
+  "version": "0.1.2-1",
   "description": "logion SDK for Crossmint",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
