feat: generate tsdoc.
logion-network/logion-internal#662

--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -55,5 +55,9 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "displayName": "Node API"
   }
 }
