--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -53,5 +53,9 @@
   "engines": {
     "node": ">=16"
   },
-  "stableVersion": "0.2.0"
+  "stableVersion": "0.2.0",
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "displayName": "Client"
+  }
 }
