--- a/packages/crossmint/package.json
+++ b/packages/crossmint/package.json
@@ -42,5 +42,9 @@
   "engines": {
     "node": ">=16"
   },
-  "stableVersion": "0.1.0"
+  "stableVersion": "0.1.0",
+  "typedoc": {
+    "entryPoint": "./src/index.ts",
+    "displayName": "Crossmint"
+  }
 }
