chore: upgrade to polkadot-v0.9.31.
logion-network/logion-internal#656

--- a/packages/node-api/tsconfig.json
+++ b/packages/node-api/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "baseUrl": ".",
     "paths": {
+        "@logion/node-api/dist/interfaces/*": ["src/interfaces/*"],
         "@polkadot/api/augment": ["src/interfaces/augment-api.ts"],
         "@polkadot/types/augment": ["src/interfaces/augment-types.ts"]
     }
