--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.7.0",
+  "version": "0.7.1-1",
   "description": "logion API",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
@@ -10,8 +10,8 @@
     "test": "jest",
     "integration-test": "docker-compose up -d && NODE_TLS_REJECT_UNAUTHORIZED=0 jasmine --config=jasmine-integration.json ; docker-compose down",
     "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
-    "generate:defs": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package ../interfaces",
-    "generate:meta": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output src/interfaces/ --package ../interfaces"
+    "generate:defs": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package @logion/node-api/dist/interfaces",
+    "generate:meta": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output ./src/interfaces/ --package @logion/node-api/dist/interfaces"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,9 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^9.5.1",
-    "@polkadot/util": "^10.1.10",
-    "@polkadot/util-crypto": "^10.1.10",
+    "@polkadot/api": "^9.7.1",
+    "@polkadot/util": "^10.1.11",
+    "@polkadot/util-crypto": "^10.1.11",
     "@types/uuid": "^8.3.4",
     "fast-sha256": "^1.3.0",
     "uuid": "^8.3.2"
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^9.5.1",
+    "@polkadot/typegen": "^9.7.1",
     "@tsconfig/node16": "^1.0.3",
     "@types/jasmine": "^4.0.3",
     "@types/jest": "^28.1.6",
