--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.7.2",
+  "version": "0.8.0-2",
   "description": "logion API",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
@@ -25,9 +25,9 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^9.8.1",
-    "@polkadot/util": "^10.1.12",
-    "@polkadot/util-crypto": "^10.1.12",
+    "@polkadot/api": "^9.10.1",
+    "@polkadot/util": "^10.2.1",
+    "@polkadot/util-crypto": "^10.2.1",
     "@types/uuid": "^8.3.4",
     "fast-sha256": "^1.3.0",
     "uuid": "^8.3.2"
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^9.8.1",
+    "@polkadot/typegen": "^9.10.1",
     "@tsconfig/node16": "^1.0.3",
     "@types/jasmine": "^4.0.3",
     "@types/jest": "^28.1.6",
