feat: migrate from CommonJS to ESM.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "website"
   ],
   "packageManager": "yarn@3.2.0",
+  "type": "module",
   "scripts": {
     "build": "yarn workspaces foreach -t run build",
     "lint": "yarn workspaces foreach -t run lint",
