--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "es2020",
+    "target": "es2020",
     "outDir": "./dist",
     "lib": ["dom"],
     "baseUrl": "."
