--- a/packages/crossmint/package.json
+++ b/packages/crossmint/package.json
@@ -4,6 +4,7 @@
   "description": "logion SDK for Crossmint",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
+  "type": "module",
   "scripts": {
     "build": "yarn lint && tsc",
     "lint": "yarn eslint src/**",
@@ -28,7 +29,7 @@
   },
   "homepage": "https://github.com/logion-network/logion-api/packages/extension#readme",
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.3",
+    "@tsconfig/node18": "^1.0.1",
     "@types/node": "^18.6.1",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
