--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -4,6 +4,7 @@
   "description": "logion API",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
+  "type": "module",
   "scripts": {
     "build": "yarn lint && tsc",
     "lint": "yarn eslint src/**",
@@ -38,7 +39,7 @@
   "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
   "devDependencies": {
     "@polkadot/typegen": "^9.10.1",
-    "@tsconfig/node16": "^1.0.3",
+    "@tsconfig/node18": "^1.0.1",
     "@types/jasmine": "^4.0.3",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
