--- a/packages/crossmint/package.json
+++ b/packages/crossmint/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/crossmint",
-  "version": "0.1.8-1",
+  "version": "0.1.8-2",
   "description": "logion SDK for Crossmint",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
@@ -21,7 +21,7 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@crossmint/embed": "^0.0.2",
+    "@crossmint/connect": "^0.0.8",
     "@logion/client": "workspace:^"
   },
   "bugs": {
