--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.10.1",
+  "version": "0.11.0-1",
   "description": "logion API",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -37,7 +37,7 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^9.13.5",
+    "@polkadot/api": "^9.13.6",
     "@polkadot/util": "^10.3.1",
     "@polkadot/util-crypto": "^10.3.1",
     "@types/uuid": "^8.3.4",
@@ -49,7 +49,7 @@
   },
   "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^9.13.5",
+    "@polkadot/typegen": "^9.13.6",
     "@tsconfig/node18": "^1.0.1",
     "@types/jasmine": "^4.0.3",
     "@types/jest": "^29.4.0",
