feat: optimize fetch and upgrade polkadot.
logion-network/logion-internal#828

--- a/packages/node-api/tsconfig.json
+++ b/packages/node-api/tsconfig.json
@@ -12,5 +12,10 @@
   },
   "include": [
     "./src/**/*"
-  ]
+  ],
+  "ts-node": {
+    "compilerOptions": {
+      "resolveJsonModule": true
+    }
+  }
 }
