--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.11.0",
+  "version": "0.11.1-1",
   "description": "logion API",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -8,8 +8,8 @@
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
-      "import": "./dist/cjs/index.js",
-      "require": "./dist/esm/index.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
   "packageManager": "yarn@3.2.0",
@@ -19,11 +19,11 @@
     "build:cjs": "tsc -p tsconfig-cjs.json",
     "build:types": "tsc -p tsconfig-types.json",
     "lint": "yarn eslint src/**",
-    "test": "jest",
-    "integration-test": "docker-compose up -d && ts-node --project ./tsconfig-test.json -T ../../node_modules/jasmine/bin/jasmine --config=jasmine-integration.json ; docker-compose down",
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "integration-test": "docker-compose up -d && NODE_OPTIONS=--loader=ts-node/esm jasmine --config=jasmine-integration.json ; docker-compose down",
     "generate:defs-meta": "yarn generate:defs && yarn generate:meta",
-    "generate:defs": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package @logion/node-api/dist/interfaces",
-    "generate:meta": "ts-node --skip-project ../../node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output ./src/interfaces/ --package @logion/node-api/dist/interfaces"
+    "generate:defs": "node --loader ts-node/esm ../../node_modules/.bin/polkadot-types-from-defs --endpoint ws://localhost:9944 --input ./src/interfaces/ --package @logion/node-api/dist/interfaces",
+    "generate:meta": "node --loader ts-node/esm ../../node_modules/.bin/polkadot-types-from-chain --endpoint ws://localhost:9944 --output ./src/interfaces/ --package @logion/node-api/dist/interfaces"
   },
   "repository": {
     "type": "git",
@@ -37,9 +37,9 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^9.13.6",
-    "@polkadot/util": "^10.3.1",
-    "@polkadot/util-crypto": "^10.3.1",
+    "@polkadot/api": "^10.1.4",
+    "@polkadot/util": "^11.1.1",
+    "@polkadot/util-crypto": "^11.1.1",
     "@types/uuid": "^8.3.4",
     "fast-sha256": "^1.3.0",
     "uuid": "^8.3.2"
@@ -49,7 +49,7 @@
   },
   "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^9.13.6",
+    "@polkadot/typegen": "^10.1.4",
     "@tsconfig/node18": "^1.0.1",
     "@types/jasmine": "^4.0.3",
     "@types/jest": "^29.4.0",
@@ -72,5 +72,6 @@
   "typedoc": {
     "entryPoint": "./src/index.ts",
     "displayName": "Node API"
-  }
+  },
+  "type": "module"
 }
