--- a/packages/node-api/package.json
+++ b/packages/node-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/node-api",
-  "version": "0.12.0",
+  "version": "0.13.0-1",
   "description": "logion API",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -37,9 +37,9 @@
   "author": "Logion Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "@polkadot/api": "^10.1.4",
-    "@polkadot/util": "^11.1.1",
-    "@polkadot/util-crypto": "^11.1.1",
+    "@polkadot/api": "^10.3.4",
+    "@polkadot/util": "^11.1.3",
+    "@polkadot/util-crypto": "^11.1.3",
     "@types/uuid": "^8.3.4",
     "fast-sha256": "^1.3.0",
     "uuid": "^8.3.2"
@@ -49,7 +49,7 @@
   },
   "homepage": "https://github.com/logion-network/logion-api/packages/node-api#readme",
   "devDependencies": {
-    "@polkadot/typegen": "^10.1.4",
+    "@polkadot/typegen": "^10.3.4",
     "@tsconfig/node18": "^1.0.1",
     "@types/jasmine": "^4.0.3",
     "@types/jest": "^29.4.0",
