--- a/packages/client/docker-compose.yml
+++ b/packages/client/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     image: logionnetwork/logion-node:${NODE_TAG:-latest}
     environment:
       - NODE_KEY=c12b6d18942f5ee8528c8e2baf4e147b5c5c18710926ea492d09cbd9f6c9f82a
-      - CUSTOM_OPTIONS=--alice --no-mdns --ws-external --rpc-cors all
+      - CUSTOM_OPTIONS=--alice --no-mdns --rpc-external --rpc-cors all
       - CHAIN_SPEC=test
   backend1:
     image: logionnetwork/logion-backend:${BACKEND_TAG:-latest}
@@ -72,7 +72,7 @@ services:
     image: logionnetwork/logion-node:${NODE_TAG:-latest}
     environment:
       - NODE_KEY=6ce3be907dbcabf20a9a5a60a712b4256a54196000a8ed4050d352bc113f8c58
-      - CUSTOM_OPTIONS=--bob --no-mdns --bootnodes /dns4/node1/tcp/30333/p2p/12D3KooWBmAwcd4PJNJvfV89HwE48nwkRmAgo8Vy3uQEyNNHBox2 --ws-external --rpc-cors all
+      - CUSTOM_OPTIONS=--bob --no-mdns --bootnodes /dns4/node1/tcp/30333/p2p/12D3KooWBmAwcd4PJNJvfV89HwE48nwkRmAgo8Vy3uQEyNNHBox2 --rpc-external --rpc-cors all
       - CHAIN_SPEC=test
     depends_on:
       - node1
@@ -136,7 +136,7 @@ services:
     image: logionnetwork/logion-node:${NODE_TAG:-latest}
     environment:
       - NODE_KEY=3a9d5b35b9fb4c42aafadeca046f6bf56107bd2579687f069b42646684b94d9e
-      - CUSTOM_OPTIONS=--charlie --no-mdns --bootnodes /dns4/node1/tcp/30333/p2p/12D3KooWBmAwcd4PJNJvfV89HwE48nwkRmAgo8Vy3uQEyNNHBox2 --ws-external --rpc-cors all
+      - CUSTOM_OPTIONS=--charlie --no-mdns --bootnodes /dns4/node1/tcp/30333/p2p/12D3KooWBmAwcd4PJNJvfV89HwE48nwkRmAgo8Vy3uQEyNNHBox2 --rpc-external --rpc-cors all
       - CHAIN_SPEC=test
     depends_on:
       - node1
