chore: bump versions.
logion-network/logion-internal#951

--- a/packages/multiversx/package.json
+++ b/packages/multiversx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logion/multiversx",
-  "version": "0.1.0-4",
+  "version": "0.1.0",
   "description": "logion SDK for MultiversX",
   "main": "dist/index.js",
   "packageManager": "yarn@3.2.0",
